<resources>
    <string name="app_name">Battleship</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create">Create new game</string>
    <string name="join">Join</string>
    <string name="stats">Stats</string>
    <string name="guest">Guest</string>
    <string name="title">BATTLESHIP</string>
    <string name="history">My games</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">EXIT</string>
</resources>
