<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@color/colorPrimary"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <Button
        android:id="@+id/create_button"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <Button
        android:id="@+id/join_button"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/user_layout">
        <ImageButton
            android:layout_width="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            style="@style/MyButton"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dummy_content"
            android:id="@+id/user_image"
            android:src="@drawable/ic_person"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/user_name"
            android:text="@string/guest"
            android:layout_weight="1"
            style="@style/MyButton"/>
    </LinearLayout>

    <Button
        android:id="@+id/stats_button"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats" />

    <Button
        android:id="@+id/exit_button"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />


</LinearLayout>